fixed overflowing dropdown

--- a/crt_portal/static/sass/custom/intake.scss
+++ b/crt_portal/static/sass/custom/intake.scss
@@ -99,6 +99,10 @@
     white-space: normal;
     align-items: baseline;
 
+    @include at-media(desktop-lg) {
+      padding-right: 4rem;
+    }
+
     &.intake-checkbox {
       ul {
         @include flex-container();
